v8
- Reduced the odds of getting a foreground when clicking the randomize button
- Gave the tabs a button hover effect

v7
- Removed redundant CSS
- Hats is no longer plural

v6
- Arrow keys will now reposition the last element you edited
- Randomize button
- Preset dropdown
- Added Jared parts
- Added JJCVIP to the credits
- Fixed hat/hair offset not being calculated properly
- New parts:
    Body: Suit, Jokester, Black shirt
    Hats: Charles XL, Top Hat
    Accessories: Bow tie

v5
- Hats and hair are now separate
- Added a View on Github button
- Fixed rapid taps on position buttons zooming the page on mobile
- Reset buttons on color pickers now works
- Resetting positioning is now an option
- New parts:
    6 new backgrounds: Night alt, Space, Brick wall, Brick wall blue, Mushroom land, Classic (snow)
    1 new miground: Snow
    7 new hair types: Bill, Bill messy, Belle, Greg, Charles, Carl, Hair loss
    2 new noses: Nose 8, Nose 9
    1 new hat: Hat stack
    2 new accessories: Glasses, Dollar necklace

v4
- Added positioning options for eyes, nose, mouth, and accessories
- Fixed the width of the parts panel changing sometimes
- No more floating heads, bodies of different heights will now move other elements to match
- Added 4 new mouths

v3
- Complete CSS overhaul, now matches rest of the website

v2
- Added a "none" option to the following part types: midground, eyes, mouth, nose, accesory
- New "Foreground" part type
- New parts:
    Carrot Pile background, midground, and foregrounds
    Themery background2123
    Classic background
    Custom Sky background
    Solid Color Background
    Textured Color background
    Bill Buddy foreground
- Gave more parts color customization
    Bill headwear
    Sunglasses accessory
- "Before" custom color mode
- Added a save image button
- "Carrot Clicker" in the title is now a link
- Parts with color options will now have an icon indicating that