@@ -121,6 +121,10 @@
                         <option value="Charles">Charles</option>
                         <option value="Carl">Carl</option>
                         <option value="Jared">Jared</option>
+                        <option value="null" disabled>--------------------</option>
+                        <option value="Fancy Bill">Fancy Bill</option>
+                        <option value="Biker Bill">Biker Bill</option>
+                        <option value="Dollar Bill">Dollar Bill</option>
                     </select>
                 </div>
 
